feat: add logging to project