@@ -7,44 +7,81 @@ import com.giarts.ateliegiarts.exception.ProductNotFoundException;
 import com.giarts.ateliegiarts.model.Product;
 import com.giarts.ateliegiarts.repository.ProductRepository;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
+@Slf4j
 public class ProductService {
     private final ProductRepository productRepository;
 
     public List<ResponseProductDTO> getAllProducts() {
-        return productRepository.findAll().stream().map(ResponseProductDTO::fromEntity).collect(Collectors.toList());
+        log.info("Retrieving all products");
+
+        List<ResponseProductDTO> products = productRepository.findAll().stream().map(ResponseProductDTO::fromEntity).toList();
+
+        log.debug("Found {} products", products.size());
+
+        return products;
     }
 
     public Product getProductEntityById(Long productId) {
-        return productRepository.findById(productId)
-                .orElseThrow(() -> new ProductNotFoundException(productId));
+        log.info("Retrieving product entity by ID: {}", productId);
+
+        Product product = productRepository.findById(productId)
+                .orElseThrow(() -> {
+                    log.warn("Product entity with ID: {} not found", productId);
+                    return new ProductNotFoundException(productId);
+                });
+
+        log.debug("Successfully retrieved product entity with ID: {}", productId);
+
+        return product;
     }
 
     public ResponseProductDTO getProductById(Long productId) {
-        return productRepository.findById(productId).map(ResponseProductDTO::fromEntity)
-                .orElseThrow(() -> new ProductNotFoundException(productId));
+        log.info("Retrieving product by ID: {}", productId);
+
+        ResponseProductDTO product = productRepository.findById(productId).map(ResponseProductDTO::fromEntity)
+                .orElseThrow(() -> {
+                    log.warn("Product with ID: {} not found", productId);
+                    return new ProductNotFoundException(productId);
+                });
+
+        log.debug("Successfully retrieved product with ID: {}", product);
+
+        return product;
     }
 
     public ResponseProductDTO createProduct(CreateProductDTO createProductDTO) {
+        log.info("Creating new product with name: {}", createProductDTO.name());
+
         Product product = new Product(createProductDTO);
         Product savedProduct = productRepository.save(product);
+
+        log.debug("Successfully created product with ID: {}", savedProduct.getId());
 
         return ResponseProductDTO.fromEntity(savedProduct);
     }
 
     public ResponseProductDTO updateProductById(Long productId, UpdateProductDTO updateProductDTO) {
+        log.info("Updating product with ID: {}", productId);
+
         Product product = productRepository.findById(productId)
-                .orElseThrow(() -> new ProductNotFoundException(productId));
+                .orElseThrow(() -> {
+                    log.warn("Product with ID: {} not found while updating", productId);
+                    return new ProductNotFoundException(productId);
+                });
 
         updateProductFields(product, updateProductDTO);
 
         Product savedProduct = productRepository.save(product);
+
+        log.debug("Successfully updated product with ID: {}", savedProduct.getId());
+
         return ResponseProductDTO.fromEntity(savedProduct);
     }
 
@@ -56,13 +93,22 @@ public class ProductService {
     }
 
     public void deleteProductById(Long productId) {
+        log.info("Deleting product with ID: {}", productId);
+
         validateProduct(productId);
         productRepository.deleteById(productId);
+
+        log.info("Successfully deleted product with ID: {}", productId);
     }
 
     public void validateProduct(Long productId) {
+        log.info("Validating product with ID: {}", productId);
+
         if (!productRepository.existsById(productId)) {
+            log.warn("Error in validation. Product with ID: {} not found", productId);
             throw new ProductNotFoundException(productId);
         }
+
+        log.debug("Validation completed for product with ID: {}", productId);
     }
 }
