@@ -12,6 +12,7 @@ import com.giarts.ateliegiarts.repository.UserRepository;
 import com.giarts.ateliegiarts.repository.UserRoleRepository;
 import com.giarts.ateliegiarts.security.SecurityService;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.security.access.AccessDeniedException;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
@@ -20,10 +21,10 @@ import java.util.HashSet;
 import java.util.List;
 import java.util.Optional;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
+@Slf4j
 public class UserService {
     private final UserRepository userRepository;
     private final UserRoleRepository userRoleRepository;
@@ -31,18 +32,36 @@ public class UserService {
     private final PasswordEncoder passwordEncoder;
 
     public List<ResponseUserDTO> getAllUsers() {
-        return userRepository.findAll().stream().map(ResponseUserDTO::fromEntity).collect(Collectors.toList());
+        log.info("Retrieving all users");
+
+        List<ResponseUserDTO> users = userRepository.findAll().stream().map(ResponseUserDTO::fromEntity).toList();
+
+        log.debug("Found {} users", users.size());
+
+        return users;
     }
 
     public ResponseUserDTO getUserById(Long userId) {
+        log.info("Retrieving user by ID: {}", userId);
+
         validateUserAccess(userId);
 
-        return userRepository.findById(userId).map(ResponseUserDTO::fromEntity)
-                .orElseThrow(() -> new UserNotFoundException(userId));
+        ResponseUserDTO user = userRepository.findById(userId).map(ResponseUserDTO::fromEntity)
+                .orElseThrow(() -> {
+                    log.warn("User with ID: {} not found", userId);
+                    return new UserNotFoundException(userId);
+                });
+
+        log.debug("Successfully retrieved user with ID: {}", userId);
+
+        return user;
     }
 
     public ResponseUserDTO createUser(CreateUserDTO createUserDTO) {
+        log.info("Creating new user with name: {}", createUserDTO.name());
+
         if (userRepository.existsByEmail(createUserDTO.email())) {
+            log.warn("Email \"{}\" already in use", createUserDTO.email());
             throw new DuplicateEmailException(createUserDTO.email());
         }
 
@@ -57,6 +76,9 @@ public class UserService {
                 .build();
 
         User savedUser = userRepository.save(user);
+
+        log.debug("Successfully created user with ID: {}", savedUser.getId());
+
         return ResponseUserDTO.fromEntity(savedUser);
     }
 
@@ -71,14 +93,22 @@ public class UserService {
     }
 
     public ResponseUserDTO updateUserById(Long userId, UpdateUserDTO updateUserDTO) {
+        log.info("Updating user by ID: {}", userId);
+
         validateUserAccess(userId);
 
         User user = userRepository.findById(userId)
-                .orElseThrow(() -> new UserNotFoundException(userId));
+                .orElseThrow(() -> {
+                    log.warn("User with ID: {} not found while updating", userId);
+                    return new UserNotFoundException(userId);
+                });
 
         updateUserFields(user, updateUserDTO);
 
         User savedUser = userRepository.save(user);
+
+        log.debug("Successfully updated user with ID: {}", savedUser.getId());
+
         return ResponseUserDTO.fromEntity(savedUser);
     }
 
@@ -89,18 +119,27 @@ public class UserService {
     }
 
     public void deleteUserById(Long userId) {
+        log.info("Deleting user with ID: {}", userId);
+
         validateUserAccess(userId);
 
         if (userRepository.existsById(userId)) {
             userRepository.deleteById(userId);
+            log.info("Successfully deleted user with ID: {}", userId);
         } else {
+            log.warn("User with ID: {} not found while deleting", userId);
             throw new UserNotFoundException(userId);
         }
     }
 
     private void validateUserAccess(Long expectedUserId) {
+        log.info("Validating user with ID: {}", expectedUserId);
+
         if (!securityService.canAccessUser(expectedUserId)) {
+            log.warn("User with ID: {} does not have permission to access this resource", expectedUserId);
             throw new AccessDeniedException("Access denied: You can only access your own information");
         }
+
+        log.debug("Validation completed for user with ID: {}", expectedUserId);
     }
 }
